--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1050,6 +1050,49 @@
     "    if len(trans[0]) > 1:\n",
     "        print(trans[0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TIME CONSTRAINTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_list_time_200 = [([['20725']], 201), ([['20726']], 201), ([['20727']], 201), ([['20728']], 201), ([['21080']], 201), ([['21212']], 201), ([['21733']], 201), ([['21754']], 201), ([['21977']], 201), ([['22086']], 201), ([['22111']], 201), ([['22138']], 201), ([['22139']], 201), ([['22382']], 201), ([['22383']], 201), ([['22384']], 201), ([['22386']], 201), ([['22423']], 201), ([['22457']], 201), ([['22469']], 201), ([['22470']], 201), ([['22666']], 201), ([['22699']], 201), ([['22720']], 201), ([['22722']], 201), ([['22727']], 201), ([['22865']], 201), ([['22910']], 201), ([['22960']], 201), ([['22961']], 201), ([['22993']], 201), ([['23084']], 201), ([['23199']], 201), ([['23201']], 201), ([['23202']], 201), ([['23203']], 201), ([['23206']], 201), ([['23207']], 201), ([['23209']], 201), ([['23245']], 201), ([['23284']], 201), ([['23298']], 201), ([['23307']], 200), ([['23321']], 201), ([['23344']], 201), ([['23355']], 201), ([['47566']], 201), ([['82482']], 201), ([['82494L']], 201), ([['84879']], 201), ([['84991']], 201), ([['85099B']], 201), ([['85123A']], 201)]\n",
+    "seq_list_time_150 = [([['20685']], 151), ([['20724']], 151), ([['20725']], 151), ([['20726']], 151), ([['20727']], 151), ([['20728']], 151), ([['20914']], 151), ([['20972']], 151), ([['21034']], 151), ([['21080']], 151), ([['21166']], 151), ([['21175']], 151), ([['21181']], 151), ([['21212']], 151), ([['21213']], 150), ([['21232']], 151), ([['21485']], 151), ([['21524']], 151), ([['21733']], 151), ([['21754']], 151), ([['21755']], 151), ([['21790']], 151), ([['21791']], 151), ([['21889']], 151), ([['21914']], 151), ([['21915']], 151), ([['21929']], 151), ([['21931']], 151), ([['21977']], 151), ([['22077']], 151), ([['22083']], 151), ([['22086']], 151), ([['22090']], 151), ([['22111']], 151), ([['22112']], 151), ([['22113']], 151), ([['22114']], 151), ([['22138']], 151), ([['22139']], 151), ([['22144']], 151), ([['22147']], 151), ([['22149']], 151), ([['22178']], 151), ([['22197']], 151), ([['22382']], 151), ([['22383']], 151), ([['22384']], 151), ([['22385']], 151), ([['22386']], 151), ([['22411']], 151), ([['22423']], 151), ([['22457']], 151), ([['22469']], 151), ([['22470']], 151), ([['22551']], 151), ([['22554']], 151), ([['22558']], 151), ([['22577']], 151), ([['22578']], 151), ([['22621']], 151), ([['22624']], 151), ([['22625']], 151), ([['22629']], 151), ([['22633']], 151), ([['22662']], 151), ([['22666']], 151), ([['22697']], 151), ([['22698']], 151), ([['22699']], 151), ([['22720']], 151), ([['22722']], 151), ([['22726']], 151), ([['22727']], 151), ([['22728']], 151), ([['22730']], 151), ([['22865']], 151), ([['22866']], 151), ([['22867']], 151), ([['22907']], 151), ([['22909']], 151), ([['22910']], 151), ([['22952']], 151), ([['22960']], 151), ([['22961']], 151), ([['22966']], 151), ([['22969']], 151), ([['22993']], 151), ([['23084']], 151), ([['23199']], 151), ([['23200']], 151), ([['23201']], 151), ([['23202']], 151), ([['23203']], 151), ([['23206']], 151), ([['23207']], 151), ([['23208']], 151), ([['23209']], 151), ([['23240']], 151), ([['23243']], 151), ([['23245']], 151), ([['23284']], 151), ([['23293']], 151), ([['23298']], 151), ([['23300']], 151), ([['23301']], 151), ([['23307']], 151), ([['23321']], 151), ([['23322']], 151), ([['23343']], 151), ([['23344']], 151), ([['23355']], 151), ([['23356']], 151), ([['23581']], 151), ([['23583']], 151), ([['47566']], 151), ([['48138']], 151), ([['48187']], 151), ([['48194']], 151), ([['82482']], 151), ([['82484']], 150), ([['82494L']], 151), ([['84378']], 151), ([['84380']], 151), ([['84755']], 151), ([['84879']], 151), ([['84946']], 151), ([['84970S']], 151), ([['84978']], 151), ([['84991']], 151), ([['84992']], 151), ([['85099B']], 151), ([['85099C']], 151), ([['85099F']], 151), ([['85123A']], 151), ([['85152']], 151), ([['20725', '20727']], 151), ([['20725', '20728']], 151), ([['20725', '22382']], 150), ([['20725', '22383']], 151), ([['20725', '22384']], 151), ([['20725', '23209']], 151), ([['20725', '85099B']], 151), ([['20727', '22384']], 151), ([['20728', '22383']], 150), ([['22086', '22910']], 151), ([['22386', '85099B']], 151), ([['22697', '22699']], 151), ([['22726', '22727']], 151), ([['23202', '23203']], 151), ([['23203', '23209']], 151), ([['23203', '85099B']], 151), ([['82482', '82494L']], 151)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200:  58 53\n",
+      "150:  192 152\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"200: \", len(seq_list_200), len(seq_list_time_200))\n",
+    "print(\"150: \", len(seq_list_150), len(seq_list_time_150))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
