last changes for today

--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -438,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0257310e20b74fd1854c351fa58406b0",
+       "model_id": "fe4fe1a9b8c94265bf16635c98ab4112",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,13 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b47bd524d3cf4d239bf11fddf47c9aac",
+       "model_id": "76469e3284c64b20bbef6e44edbe5ace",
        "version_major": 2,
        "version_minor": 0
       },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "max      92.000000   373.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,13 +725,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cecbb40cb7a543f5929229acba478ad5",
+       "model_id": "5570e14cb7b64d0d86004c80b0b2c68e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -752,7 +752,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0431c3c87bb4f61b2d26018c0af2509",
+       "model_id": "bd76dd50c2ae426aa03446c9c353663d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -773,7 +773,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bba999915f54d5bbccdf270402ddf06",
+       "model_id": "26d2c3740f0e4bd7b30d39e775ceeb1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +794,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5710c09094944c6894d9425c141fae1",
+       "model_id": "a622407a6aca42ed95998f187f406f0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -815,7 +815,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99ad78c0a339424a8c56e0c558d0db3d",
+       "model_id": "daf6bcbbca884e2bb6d27a7349bed47d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,13 +1089,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47094a03aaa14a1a84a714fa01a4424b",
+       "model_id": "b57e912e46a54758b4559a954cd11469",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1116,7 +1116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb84915f2d0b414983b4b3e1f0abd677",
+       "model_id": "c1bb43b9c581462aaf9811ef6d51366b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1137,7 +1137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94079c9550d74d4fabbeaf6d210c66cc",
+       "model_id": "071dd6903bad4e3987b696f121771394",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1158,7 +1158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36c3e633613e4474b96632ed388bdd12",
+       "model_id": "0af783c4aeea4fbb93b429758da7c3f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1439,7 +1439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2104ba7224349e99994ab679b568161",
+       "model_id": "030e00fdfc254c87abf11b3197b13691",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1460,7 +1460,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bc0f42550224413b54cf06e4bf91e68",
+       "model_id": "6c60f689e1d040e3b6fb3f8d749b6b1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1481,7 +1481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3740cc3631f4a8eb677f97b4179711c",
+       "model_id": "094c368e19af49eda401d91a3ee1988a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -1533,7 +1533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84df44ee3d784f5f8fdf3428b0cbd75c",
+       "model_id": "24fad19cdbe0464d89f9f86b76e61500",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1558,7 +1558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "204458b0e0f54db38f6b630359c1e584",
+       "model_id": "525426aa520a46bdbe350f2f4b1e9af0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1583,7 +1583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d94fecbdc59d48f28317db3c1abcc816",
+       "model_id": "27dc46d397864f71a4e0ba76ea945af8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1608,7 +1608,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d5752ad39c8498882a9443198d6158d",
+       "model_id": "c321d27884bb4a3d8389f6a305d522f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1633,7 +1633,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "599c83c702744f5d8fbd6186e8bd84d0",
+       "model_id": "0a9f280c961c490894656973d6998513",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
        "max     10.790000  18260.000000  200.000000"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb87098e62424ed591204940452a58ca",
+       "model_id": "112ebc3a727e429d8b0c1e1b414f9d60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1839,7 +1839,7 @@
    ],
    "source": [
     "print(\"INTERESTING SEQUENCES WITH SUPPORT > 120 (AND HAVING MORE THAN ONLY THREE SUBSEQUENCE)\\n\")\n",
-    "for i in range(len(true_seq**Looking at results without TIME CONSTRAINTS and with support > 200**_list_120)):\n",
+    "for i in range(len(true_seq_list_120)):\n",
     "    if len(true_seq_list_120[i][0]) > 3:\n",
     "        print(f\"\\n-----------------Sequence index: {i}-----------------\\n{get_prod_desc_seq([true_seq_list_120[i]])}\\n\",\n",
     "              \"-\"*50)"
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
        "max      5.790000  18283.000000  1010.000000"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
        "530085  WHITE HANGING HEART T-LIGHT HOLDER   -1  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
        "308671  WHITE HANGING HEART T-LIGHT HOLDER   16  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
