--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -6692,16 +6692,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average:  3.1875\n",
-      "Counter:  {1: 10, 2: 12, 3: 15, 4: 20, 5: 1, 6: 3, 7: 2, 8: 1}\n",
-      "Ratio between: 23203/23209: 1.4\n"
+      "Orders that contains the subsequence / total number of orders:  203 / 469\n",
+      "Average:  3.171875\n",
+      "Sequence Counter among orders:  {1: 64, 2: 54, 3: 41, 4: 27, 5: 7, 6: 6, 7: 3, 8: 1}\n",
+      "Ratio between JUMBO BAG DOILEY PATTERNS[ID:23203] & #LUNCH BAG DOILEY PATTERN[ID:23209]: 1.3156715747733925\n"
      ]
     }
    ],
@@ -6711,36 +6712,57 @@
     "prod_1, prod_2 = patterns[1553][0][0]\n",
     "# print(prod_1, prod_2, sep=\" - \")\n",
     "total = 0\n",
+    "ratio = 0\n",
     "counter = {i:0 for i in range(1,9)}\n",
-    "qt_x = 0\n",
-    "qt_y = 0\n",
+    "valid_basketid = []\n",
+    "for order in df_pattern['BasketID'].unique():\n",
+    "    df_aux = df_pattern[df_pattern['BasketID'] == order]\n",
+    "    pattern = {prod_1:False, prod_2:False}\n",
+    "    for _, row in df_aux.iterrows():\n",
+    "        if row['ProdID'] == prod_1:\n",
+    "            pattern[prod_1] = True\n",
+    "        if row['ProdID'] == prod_2:\n",
+    "            pattern[prod_2] = True\n",
+    "    if all(pattern.values()):\n",
+    "        valid_basketid.append(order)\n",
+    "print(\"Orders that contains the subsequence / total number of orders: \", len(valid_basketid), \"/\", len(df_pattern['BasketID'].unique()))\n",
     "for customer in df_pattern['CustomerID'].unique():\n",
     "    df_aux = df_pattern[(df_pattern['CustomerID'] == customer)][['BasketID', 'BasketDate', 'Qta', \"ProdID\"]]\n",
     "    customer_total = 0\n",
-    "    for date in df_aux['BasketDate'].unique():\n",
-    "        df_appo = df_aux[df_aux['BasketDate'] == date]\n",
-    "        x = 0\n",
-    "        y = 0\n",
-    "        for _,row in df_appo.iterrows():\n",
-    "            if prod_1 == row['ProdID']:\n",
-    "                x += 1\n",
-    "                qt_x += row['Qta']\n",
-    "            if prod_2 in row['ProdID']:\n",
-    "                y += 1\n",
-    "                qt_y += row['Qta']\n",
-    "        customer_total += min(x, y)\n",
-    "    counter[customer_total] += 1\n",
+    "    qt_x = 0\n",
+    "    qt_y = 0\n",
+    "    for basket in df_aux['BasketID'].unique():\n",
+    "        if basket in valid_basketid:\n",
+    "            df_appo = df_aux[df_aux['BasketID'] == basket]\n",
+    "            pattern = {prod_1:False, prod_2:False}\n",
+    "            for _,row in df_appo.iterrows():\n",
+    "                if row['ProdID'] == prod_1:\n",
+    "                    if not pattern[prod_1]:\n",
+    "                        qt_x += row['Qta']\n",
+    "                    pattern[prod_1] = True\n",
+    "                if row['ProdID'] == prod_2:\n",
+    "                    if not pattern[prod_2]:\n",
+    "                        qt_y += row['Qta']\n",
+    "                    pattern[prod_2] = True\n",
+    "                if all(pattern.values()):\n",
+    "                    customer_total += 1\n",
+    "                    counter[customer_total] += 1\n",
+    "                    pattern = {prod_1:False, prod_2:False}\n",
     "    total += customer_total\n",
+    "    ratio += qt_x/qt_y\n",
     "print(\"Average: \", total/len(df_pattern['CustomerID'].unique()))\n",
-    "print(\"Counter: \", counter)\n",
-    "print(f\"Ratio between: {prod_1}/{prod_2}: {qt_x/qt_y}\")"
+    "print(\"Sequence Counter among orders: \", counter)\n",
+    "print(f\"Ratio between JUMBO BAG DOILEY PATTERNS[ID:{prod_1}] & #LUNCH BAG DOILEY PATTERN[ID:{prod_2}]: {ratio/len(df_pattern['CustomerID'].unique())}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pattern _{ JUMBO BAG DOILEY PATTERNS, LUNCH BAG DOILEY PATTERN }_ on average is present more than once for each customer during the period of observation."
+    "The sequence [['JUMBO BAG DOILEY PATTERNS', 'LUNCH BAG DOILEY PATTERN '], ['JUMBO BAG DOILEY PATTERNS']] , which is common for the ~6% of the customers has some interesting characteristics, especially if we focus about the sequence ['JUMBO BAG DOILEY PATTERNS', 'LUNCH BAG DOILEY PATTERN ']:\n",
+    "- The subpattern is frequent among the customers in fact on average the have it at least 3 times (above the full distribution)\n",
+    "- A customer that buys the jumbo bag is likely to buy the the lunch bag too, in fact almost 50% of the orders contains the subsequence\n",
+    "- Jumbo bag still seems to be the more relevant item since its quantity is greater than the lunch bag one, but also as we can see in the pattern jumbo bag is common by its own"
    ]
   },
   {
