--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -517,7 +517,8 @@
     "    cust_df = df.loc[df['CustomerID'] == customer,['BasketID', 'BasketDate', 'ProdID']]\n",
     "    for basket in cust_df['BasketID'].unique():\n",
     "        prod_list = cust_df[cust_df['BasketID'] == basket]['ProdID'].unique().tolist()\n",
-    "        date = cust_df[cust_df['BasketID'] == basket]['BasketDate'].iloc[0] #because orders are always mad on same day we can take first date in order (at max we will have 2 elements differing of 1 minute)\n",
+    "        #because orders are always made on same day we can take first date in order (at max we will have 2 elements differing of 1 minute)\n",
+    "        date = cust_df[cust_df['BasketID'] == basket]['BasketDate'].iloc[0] \n",
     "        cust_trans_with_dates.append((prod_list,date))\n",
     "    cust_trans_with_dates_list[customer] = cust_trans_with_dates"
    ]
@@ -542,7 +543,7 @@
     "\n",
     "Anything above this support thresholds did not produce relevant results.\n",
     "\n",
-    "Since the computation of results was extremely long, the result structure was saved in files (_see folder output_) and here we copied it."
+    "Since the computation of results was extremely long, the result structure was saved in files (_see folder gspoutputs_) and here we copied it."
    ]
   },
   {
@@ -1146,7 +1147,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2662,7 +2663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As previosly discussed, the result structure was saved in files (_see folder output_) and here we copied it."
+    "As previosly discussed, the result structure was saved in files (_see folder gspoutputs_) and here we copied it."
    ]
   },
   {
