Checked DataUnderstanding_DataPreparation.ipynb

--- a/DM_10_TASK1/CustomerDataset.ipynb
+++ b/DM_10_TASK1/CustomerDataset.ipynb
@@ -20,8 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
     "import statistics as stat\n",
-    "import seaborn as sns\n",
-    "import datetime"
+    "import seaborn as sns"
    ]
   },
   {
@@ -279,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Index creation for Customer Dataframe"
+    "## Index creation for Customer Dataframe"
    ]
   },
   {
@@ -325,13 +324,11 @@
     "max_prod_spent = []      # maximum amount spent in the observation period (by product) per customer\n",
     "mean_prod_sale = []      # mean amount spent in the observation period per customer\n",
     "\n",
-    "#Discount shouldn't be part of products bought nor returned \n",
+    "# Discount shouldn't be part of products bought nor returned \n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(data), desc=\"Iterating over customers\"):\n",
-    "    # use set ?\n",
     "    # dividing filters instead of conjuncting them is MUCH FASTER\n",
     "    df_temp = df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()\n",
     "    unique_products.append(len(df_temp.loc[df_temp['ProdID'] != 'D']))\n",
-    "    \n",
     "    \n",
     "    # discount are counted in total orders\n",
     "    df_temp = df.loc[df['CustomerID'] == customer, ['BasketID', 'Qta']]\n",
@@ -395,14 +392,12 @@
    ],
    "source": [
     "# create auxiliary dictionary {order_stats_per_customer} for index creation (by order) per customer\n",
-    "\n",
-    "order_stats_per_customer = {} # key = customerID, value = list(max_products_order, min, mean_accum, max_spent_order, min, mean_accum, mean_counter) \n",
+    "# {customerID: list(max_products_order, min, mean_accum, max_spent_order, min, mean_accum, mean_counter)}\n",
+    "order_stats_per_customer = {}\n",
     "mean_counter = 0\n",
     "data_about_order = df[['BasketID','CustomerID']].drop_duplicates()\n",
     "\n",
-    "######################################################################################################################################\n",
-    "#what about discount? no sense reasoning about those records if calculating max/min qta/sale, but reasonable to add them in mean calc#\n",
-    "######################################################################################################################################\n",
+    "# what about discount? no sense reasoning about those records if calculating max/min qta/sale, but reasonable to add them in mean calc\n",
     "\n",
     "for _, r in tqdm(data_about_order.iterrows(), total=len(data_about_order), desc=\"Iterating over orders\"):\n",
     "    customer = r[\"CustomerID\"]\n",
@@ -554,7 +549,6 @@
     "day_with_most_orders = []\n",
     "dict_day = {0:'Mon',1:'Tue',2:'Wed',3:'Thu',4:'Fri',5:'Sat',6:'Sun'} # utility\n",
     "\n",
-    "\n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
     "    \n",
     "    # to calculate presence\n",
@@ -635,9 +629,7 @@
     "            max_val = value\n",
     "            max_key = key\n",
     "    \n",
-    "    month_with_most_orders[customer] = months[max_key]\n",
-    "    \n",
-    "    "
+    "    month_with_most_orders[customer] = months[max_key]"
    ]
   },
   {
@@ -773,8 +765,7 @@
     "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
     "    shopping_days_per_customer = list(df.loc[df['CustomerID'] == customer,['BasketDate']]['BasketDate'].dt.dayofweek.unique())\n",
     "    shopping_days_entropy_prob = pd.core.frame.DataFrame({'shopping_days': shopping_days_per_customer}).value_counts(normalize=True)\n",
-    "    entropy_shopping_days.append(stats.entropy(shopping_days_entropy_prob, base = 2))\n",
-    "    "
+    "    entropy_shopping_days.append(stats.entropy(shopping_days_entropy_prob, base = 2))"
    ]
   },
   {
